# codevigil

./: .gitignore  CHANGELOG.md  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.docs/: task-classifier-design.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
codevigil/: __init__.py  __main__.py  aggregator.py  bootstrap.py  classifier.py  cli.py  config.py  errors.py  ingest.py  parser.py  privacy.py  projects.py  registry.py  turns.py  types.py  watch_roots.py  watcher.py  watcher_cache.py
codevigil/analysis/: __init__.py  cohort.py  compare.py  correlations.py  guards.py  processed_store.py  store.py
codevigil/collectors/: __init__.py  _text_match.py  parse_health.py  prompts.py  read_edit_ratio.py  reasoning_loop.py  stop_phrase.py  thinking.py
codevigil/history/: __init__.py  detail_cmd.py  diff_cmd.py  filters.py  heatmap_cmd.py  list_cmd.py
codevigil/renderers/: __init__.py  _bars.py  json_file.py  terminal.py
codevigil/report/: __init__.py  loader.py  renderer.py
codevigil/ui/: progress.py
docs/: README.md  classifier-calibration.md  classifier.md  cli.md  collectors.md  configuration.md  design.md  getting-started.md  installation.md  privacy.md
scripts/: calibrate_classifier.py  capture_baseline_metrics.py  ci_privacy_grep.sh  recalibrate_thresholds.py
tests/: _aggregator_helpers.py  _watcher_helpers.py  test_aggregate_session_task_type.py  test_aggregator_bootstrap_integration.py  test_aggregator_collector_isolation.py  test_aggregator_error_routing.py  test_aggregator_lifecycle.py  test_aggregator_smoke.py  test_aggregator_status_metrics.py  test_aggregator_turns.py  test_aggregator_uptime_regression.py  test_bootstrap.py  test_bootstrap_persistence.py  test_classifier_calibration.py  test_classifier_disabled.py  test_classifier_rules.py  test_cli_ingest.py  test_collector_state_serialization.py  test_config_check_cli.py  test_config_precedence.py  test_config_stop_phrase_custom.py  test_config_validation.py  test_correlations.py  test_docs_sync.py  test_errors.py  test_multi_source.py  test_parser_baseline_regression.py  test_parser_dedup.py  test_parser_drift.py  test_parser_fingerprint.py  test_parser_happy_path.py  test_parser_historical_shapes.py  test_parser_malformed.py  test_parser_streaming.py  test_parser_structural_kinds.py  test_privacy.py  test_processed_session_store.py  test_progress_reporter.py  test_project_registry.py  test_recalibrate_script.py  (+19 more)
tests/analysis/: __init__.py  test_cohort.py  test_compare.py  test_compare_entry_filter.py  test_guards.py  test_store.py  test_store_aggregator_integration.py
tests/cli/: _fixtures.py  test_explain_flag.py  test_export_round_trip.py  test_report_golden.py  test_report_output_file.py  test_report_path_scope.py  test_watch_baseline_store_wireup.py  test_watch_instant_shutdown.py  test_watch_shutdown.py
(+91 files in other folders)
